More description added

--- a/README.textile
+++ b/README.textile
@@ -2,6 +2,12 @@ h1. jbake-archetype
 
 Jbake Archetype with default template.
 
-Bake your site with @mvn jbake:inline@
+Bake your site with @mvn jbake:generate@
+View your site with @mvn jbake:inline@
 
 It internally uses @jbake-maven-plugin@ https://github.com/ingenieux/jbake-maven-plugin
+
+h2. Goals
+@mvn jbake:generate@
+@mvn jbake:inline@
+@mvn jbake:watch@
